添加学习内容

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -489,6 +489,7 @@ html {
           padding: 0;
           background: none;
           line-height: 0;
+          color: red;
           .icon {
             fill: #b3b3b3;
           }
