--- a/src/assets/css/cover.less
+++ b/src/assets/css/cover.less
@@ -7,13 +7,18 @@
     justify-content: flex-end;
 }
 
-.el-tabs__header{
+.el-tabs__header {
     margin: 0 !important;
 }
 
-.el-submenu__title,.el-menu-item{
+.el-submenu__title,
+.el-menu-item {
     background-color: #fff !important;
     color: #666666 !important;
+
+    span {
+        padding-left: 10px;
+    }
 }
 
 .el-tabs__content {
@@ -24,36 +29,49 @@
     right: 16px;
 }
 
-.el-tabs{
+.el-tabs {
     background-color: #fff;
 }
 
-.el-tabs__item{
-    &.is-active{
+.el-tabs__item {
+    &.is-active {
         background-color: #Eee;
     }
 }
 
-.el-tab-pane{
+.el-tab-pane {
     width: 100%;
     height: 100%;
 }
-.m-window{
+
+.m-window {
     width: 100%;
     height: 100%;
     background: #fff;
 }
-.el-card{
-    &.is-always-shadow{
+
+.el-card {
+    &.is-always-shadow {
         width: 100%;
-        height: 100%; 
+        height: 100%;
     }
 }
 
-.el-button{
+.el-button {
     padding: 0px 10px !important;
     border-radius: 4px !important;
     font-size: 12px !important;
     height: 32px !important;
     line-height: 31px !important;
+}
+
+.m-left2 {
+    .el-menu {
+        .el-submenu {
+            .el-menu-item {
+                padding-left: 80px !important;
+            }
+        }
+
+    }
 }
