--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -28,6 +28,7 @@ td {
   padding: 0;
 }
 
+
 body {
   background: #fff;
   color: #555;
@@ -305,41 +306,42 @@ html {
         padding: 0 32px !important;
       }
     }
+    .el-submenu{
+      .el-menu-item {
 
-    .m-el-menu-item {
-      padding-left: 80px !important;
+        &.is-active,
+        &.is-focus {
+          position: relative;
+          background: linear-gradient(270deg,
+              rgba(195, 13, 35, 0) 0%,
+              rgba(195, 13, 35, 0.13) 100%);
 
-      &.is-active,
-      &.is-focus {
-        position: relative;
-        background: linear-gradient(270deg,
-            rgba(195, 13, 35, 0) 0%,
-            rgba(195, 13, 35, 0.13) 100%);
+          &::before {
+            content: '';
+            position: absolute;
+            top: 21px;
+            left: 64px;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background-color: #c30d23;
+          }
 
-        &::before {
-          content: '';
-          position: absolute;
-          top: 21px;
-          left: 64px;
-          width: 8px;
-          height: 8px;
-          border-radius: 50%;
-          background-color: #c30d23;
-        }
-
-        &::after {
-          content: '';
-          position: absolute;
-          top: 13px;
-          left: 0px;
-          width: 4px;
-          height: 24px;
-          border-radius: 0px 100px 100px 0px;
-          background-color: #c30d23;
+          &::after {
+            content: '';
+            position: absolute;
+            top: 13px;
+            left: 0px;
+            width: 4px;
+            height: 24px;
+            border-radius: 0px 100px 100px 0px;
+            background-color: #c30d23;
+          }
         }
       }
-    }
 
+    }
+    
     .el-radio-button__inner {
       border: none;
     }
@@ -405,34 +407,6 @@ html {
   overflow: hidden;
 }
 
-
-
-.m-left2-fold {
-  width: auto;
-
-  .el-menu-item {
-    position: relative;
-
-    &.is-active {
-      background: linear-gradient(270deg,
-          rgba(195, 13, 35, 0) 0%,
-          rgba(195, 13, 35, 0.13) 100%);
-
-      &::after {
-        content: '';
-        position: absolute;
-        top: 13px;
-        left: 0px;
-        width: 4px;
-        height: 24px;
-        border-radius: 0px 100px 100px 0px;
-        background-color: #c30d23;
-      }
-    }
-  }
-}
-
-
 .el-radio-group-fold {
   position: fixed;
   left: 24px;
@@ -494,9 +468,10 @@ html {
 
 .el-radio-group-unfold {
   position: absolute;
-  top: 80px;
   left: 232px;
   z-index: 150;
+  top: 120px;
+  // height: 80px;
   width: 32px;
   bottom: 0;
 
@@ -515,7 +490,7 @@ html {
       display: none;
     .el-radio-button {
       position: absolute;
-      bottom: 24px;
+      bottom: 32px;
       width: 32px;
       height: 40px;
       // background: rgba(255, 255, 255, 1);
@@ -557,3 +532,4 @@ html {
     margin: 0;
   }
 }
+
