--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -28,14 +28,11 @@ td {
   padding: 0;
 }
 
-
 body {
   background: #fff;
   color: #555;
-  font-size: 14px;
+  font-size: 12px;
   font-family: "Microsoft YaHei", Arial, Helvetica, sans-serif;
-  -webkit-user-select: none;
-  user-select: none;
 }
 
 html,
@@ -47,7 +44,7 @@ body {
 td,
 th,
 caption {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 h1,
@@ -73,14 +70,6 @@ var {
   font-weight: normal;
 }
 
-html,
-body,
-#app {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 a {
   color: #555;
   text-decoration: none;
@@ -91,9 +80,9 @@ a:hover {
 }
 
 img {
-  border: none;
   width: 100%;
   height: 100%;
+  border: none;
 }
 
 ol,
@@ -106,7 +95,7 @@ input,
 textarea,
 select,
 button {
-  font: 14px;
+  font: 12px;
   font-family: "Microsoft YaHei", Helvetica, Arial, sans-serif;
 }
 
@@ -130,22 +119,40 @@ html {
   *zoom: 1;
 }
 
+/*chrome滚动条颜色设置*/
 
-.top-logout {
+*::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: transparent;
+}
+
+/*滚动条整体样式*/
+
+*::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 10px;
+}
+
+/*滚动条里面小方块*/
+
+*::-webkit-scrollbar-thumb {
+  background-color: #999;
+  border-radius: 5px;
+}
+
+/*滚动条里面轨道*/
+
+
+.icon {
+  width: 16px;
+  height: 16px;
+  fill: #b3b3b3;
+  overflow: hidden;
+}
+
+#app {
   height: 100%;
-  display: flex;
-  align-items: center;
-  width: 88px;
-  background: rgba(34, 34, 34, 1);
-  justify-content: center;
-  cursor: pointer;
-  .top-icon {
-    fill: #ffffff;
-    width: 20px;
-    height: 20px;
-    opacity: 0.5;
-    cursor: pointer;
-  }
 }
 
 
@@ -244,6 +251,7 @@ html {
   bottom: 0;
   z-index: 999;
   overflow-y: scroll;
+
   .el-menu--collapse {
     width: 88px;
 
@@ -306,7 +314,8 @@ html {
         padding: 0 32px !important;
       }
     }
-    .el-submenu{
+
+    .el-submenu {
       .el-menu-item {
 
         &.is-active,
@@ -341,7 +350,7 @@ html {
       }
 
     }
-    
+
     .el-radio-button__inner {
       border: none;
     }
@@ -397,14 +406,12 @@ html {
   line-height: 40px;
   width: 90px;
   text-align: center;
-}
 
-.icon {
-  width: 1em;
-  height: 1em;
-  vertical-align: -0.15em;
-  fill: currentColor;
-  overflow: hidden;
+  .el-button {
+    padding: 0 10px;
+    height: 32px;
+    line-height: 31px;
+  }
 }
 
 .el-radio-group-fold {
@@ -413,11 +420,6 @@ html {
   z-index: 1500;
   width: 40px;
   bottom: 0;
-
-  .icon {
-    width: 16px;
-    height: 16px;
-  }
 
   .el-radio-group {
     position: relative;
@@ -479,15 +481,11 @@ html {
     display: block;
   }
 
-  .icon {
-    width: 16px;
-    height: 16px;
-  }
-
   .el-radio-group {
     height: 100%;
     position: relative;
-      display: none;
+    display: none;
+
     .el-radio-button {
       position: absolute;
       bottom: 32px;
@@ -530,6 +528,54 @@ html {
 
   .el-radio-group {
     margin: 0;
+  }
+}
+
+.m-window {
+  background: #fff;
+  padding: 16px;
+}
+
+.m-users,
+.m-roleList,.m-permissionsList,.m-producList{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.el-table {
+  margin-top: 16px;
+}
+.el-row {
+    line-height: 40px;
+  }
+
+  .el-pagination {
+    padding: 16px;
+  }
+
+.m-permissionsList{
+  overflow: auto;
+}
+
+.m-producList{
+  
+  .m-table{
+    position: absolute;
+    left: 16px;
+    right: 16px;
+    top: 80px;
+    bottom: 50px;
+    overflow: auto;
+    .el-table{
+      margin-top: 0px;
+    }
+  }
+  .m-pagination{
+    position: absolute;
+    bottom: 10px;
   }
 }
 
