--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -534,23 +534,30 @@ html {
 .m-window {
   background: #fff;
   padding: 16px;
-}
-
-.m-users,
-.m-roleList,
-.m-permissionsList,
-.m-producList,
-.m-parameters,
-.m-categories,
-.m-orders,
-.m-reports,
-.m-StudyJavaScriptVue{
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  overflow: auto;
 }
+
+// .m-users,
+// .m-roleList,
+// .m-permissionsList,
+// .m-producList,
+// .m-parameters,
+// .m-categories,
+// .m-orders,
+// .m-reports,
+// .m-StudyJavaScriptVue,
+// .m-dashboard{
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+// }
 
 .el-table {
   margin-top: 16px;
@@ -613,3 +620,5 @@ html {
   }
 
 }
+
+
