--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -155,6 +155,31 @@ html {
   height: 100%;
 }
 
+.m-dateTime {
+  position: relative;
+  float: right;
+  padding: 25px 30px;
+  color: #fff;
+
+  .m-day {
+      float: left;
+      height: 40px;
+      line-height: 40px;
+      font-size: 40px;
+      font-weight: bold;
+      padding-right: 10px;
+  }
+
+  .m-dates {
+      float: right;
+
+      .m-weekTime {
+          span:first-child {
+              padding-right: 5px;
+          }
+      }
+  }
+}
 
 .m-right {
   position: absolute;
@@ -205,8 +230,8 @@ html {
       }
 
       li:hover {
-        border: 1px solid #4BB4FF;
-        box-shadow: 0px 0px 6px 0px rgba(75, 180, 255, 0.79);
+        border: 1px solid #c30d23;
+        box-shadow: 0px 0px 6px 0px rgba(195, 13, 35, 0.7);
       }
 
       .m-completed {
@@ -619,6 +644,15 @@ html {
     top: 72px;
   }
 
+}
+
+.cell{
+  .el-image-viewer__canvas{
+    img{
+      width: 200px;
+      height: 200px;
+    }
+  }
 }
 
 
